[workspace]
members = [
    "core",
    "core_macros",
    "state_objects",
    "state_objects_macros",
    "schema",
    "schema_macros",
    "message_api",
    "testing",
    "util/simple_time",
]

[workspace.package]
version = "0.0.1"
repository = "https://github.com/cosmos/cosmos-sdk"
license = "Apache-2.0"

[workspace.lints]

[workspace.lints.rust]
missing_docs = "deny"

[package]
name = "ixc"
edition = "2021"
readme = "README.md"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ixc_core = { path = "core" }
ixc_schema = { path = "schema" }
ixc_message_api = { path = "message_api" }
state_objects = { path = "state_objects" }
simple_time = { path = "util/simple_time" }
ixc_core_macros = { path = "core_macros" }
ixc_schema_macros = { path = "schema_macros" }
state_objects_macros = { path = "state_objects_macros" }

[dev-dependencies]
ixc_testing = { path = "testing" }
arrayvec = "0.7.6"
thiserror = "1.0.63"

[lints]
workspace = true

[features]
default = ["core_macros", "schema_macros", "state_objects_macros"]
core_macros = []
schema_macros = []
state_objects_macros = []
