[package]
name = "ixc_core"
edition = "2021"
description = "Interchain SDK Core"
version = "0.0.4"
readme = "README.md"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api", version = "0.0.4" }
ixc_schema = { path = "../schema", version = "0.0.4" }
ixc_core_macros = { path = "../core_macros", version = "0.0.4" }
allocator-api2 = "0.2.18"
constcat = "0.5.1"

[features]
default = ["std"]
std = []
