[package]
name = "ixc_core_macros"
edition = "2021"
description = "Interchain SDK Core Macros"
version = "0.0.3"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.77", features = ["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
deluxe = "0.5.0"
manyhow = "0.11.4"
heck = "0.5.0"
blake2 = "0.10.6"
