[package]
name = "example_bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeropb = {path = "../zeropb"}
cosmossdk_core = {path = "../cosmossdk_core"}
state_objects = {path = "../state_objects"}
dashu-int = "0.4.1"
