[package]
name = "interchain_prelude"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
interchain_core = { path = "../core" }
interchain_message_api = { path = "../message_api" }
state_objects = { path = "../state_objects" }
