[package]
name = "ixc_schema"
edition = "2021"
description = "Interchain SDK Schema"
readme = "README.md"
version = "0.0.2"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api", version = "0.0.2" }
simple_time = { path = "../util/simple_time", version = "0.0.1" }

[features]
default = ["address", "std"]
address = []
std = []
