[package]
name = "ixc_schema"
edition = "2021"
description = "Interchain SDK Schema"
readme = "README.md"
version = "0.0.2"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api" }
simple_time = { path = "../util/simple_time", version = "0.0.1" }
bump-scope = "0.9.0"
allocator-api2 = "0.2.18"
num_enum = "0.7.3"

[features]
default = ["std"]
std = []
