[package]
name = "ixc_schema"
edition = "2021"
description = "Interchain SDK Schema"
readme = "README.md"
version = "0.0.4"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ixc_message_api = { path = "../message_api", version = "0.0.4" }
ixc_schema_macros = { path = "../schema_macros", version = "0.0.3" }
simple_time = { path = "../util/simple_time", version = "0.0.2" }
bumpalo = { version = "3.16.0", features = ["allocator-api2"], optional = true }
allocator-api2 = "0.2.18"
num_enum = "0.7.3"

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"

[features]
default = ["std"]
std = []
bumpalo = ["dep:bumpalo"]
use_ixc_macro_path = []
