[package]
name = "interchain_schema_macros"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2.0.77", features = ["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"
deluxe = "0.5.0"
manyhow = "0.11.4"
