[package]
name = "state_objects"
edition = "2021"
description = "Interchain SDK State Objects"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ixc_core = { path = "../core" }
ixc_schema = { path = "../schema" }
simple_time = { path = "../util/simple_time" }
thiserror = "1.0.63"

[lints]
workspace = true
