[package]
name = "state_objects"
edition = "2021"
description = "Interchain SDK State Objects"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ixc_core = { path = "../core", version = "0.0.2" }
ixc_schema = { path = "../schema", version = "0.0.2" }
simple_time = { path = "../util/simple_time", version = "0.0.1" }
thiserror = "1.0.63"

[lints]
workspace = true
