[package]
name = "state_objects"
edition = "2021"
description = "Interchain SDK State Objects"
version = "0.0.4"
repository.workspace = true
license.workspace = true

[dependencies]
ixc_core = { path = "../core", version = "0.0.4" }
ixc_core_macros = { path = "../core_macros", version = "0.0.4" }
ixc_schema = { path = "../schema", version = "0.0.4" }
ixc_message_api = { path = "../message_api", version = "0.0.4" }
bump-scope = "0.9.2"
simple_time = { path = "../util/simple_time", version = "0.0.2" }
num_enum = "0.7.3"
thiserror = "1.0.63"

[lints]
workspace = true

[features]
default = ["std"]
std = []
