[package]
name = "state_objects_macros"
edition = "2021"
description = "Interchain SDK State Objects Macros"
version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2.0.77", features = [] }
quote = "1.0.37"
deluxe = "0.5.0"

[features]
default = ["std"]
std = []
parallel_safe = []
