[package]
name = "ixc_testing"
edition = "2021"
description = "Interchain SDK Testing"
readme = "README.md"
version = "0.0.2"
repository.workspace = true
license.workspace = true

[dependencies]
ixc = { path = "..", version = "0.0.2" }
ixc_core = { path = "../core", version = "0.0.2" }
ixc_message_api = { path = "../message_api", version = "0.0.2" }
ixc_vm_api = { path = "../vm/api" }
ixc_hypervisor = { path = "../vm/hypervisor" }
ixc_schema = { path = "../schema" }
imbl = "3.0.0"
arc-swap = "1.7.1"
thiserror = "1.0.64"
allocator-api2 = "0.2.18"

[lints]
workspace = true
