[package]
name = "ixc_testing"
edition = "2021"
description = "Interchain SDK Testing"
readme = "README.md"
version = "0.0.3"
repository.workspace = true
license.workspace = true

[dependencies]
ixc = { path = "..", version = "0.0.3" }
ixc_core = { path = "../core", version = "0.0.3" }
ixc_core_macros = {path = "../core_macros", version = "0.0.3" }
ixc_message_api = { path = "../message_api", version = "0.0.3" }
ixc_vm_api = { path = "../vm/api" }
#ixc_hypervisor = { path = "../vm/hypervisor" }
ixc_schema = { path = "../schema" }
ixc_schema_macros = { path = "../schema_macros" }
imbl = "3.0.0"
arc-swap = "1.7.1"
thiserror = "1.0.64"
allocator-api2 = "0.2.18"

[lints]
workspace = true
