[package]
name = "zeropb_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-types = { version = "0.12.1", features = [] }
prost = "0.12.1"
flate2 = "1.0.28"
anyhow = "1.0.75"
heck = "0.5.0-rc.1"
