[package]
name = "ixc-codec-proto"
version = "0.0.1"
edition = "2021"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ixc_schema = { path = "../../schema" }
ixc_message_api = { path = "../../message_api" }
simple_time = { path = "../../util/simple_time" }
integer-encoding = "4.0.2"

[lints]
workspace = true
