[package]
name = "ixc_hypervisor"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ixc_message_api = { path = "../../message_api" }
ixc_vm_api = { path = "../../vm/api" }
ixc_core_macros = { path = "../../core_macros" }

[lints]
workspace = true
